update z-indexes to ensure BackNavButton doesn't overlay header

--- a/src/features/Common/components/SmallScreenOverlay/SmallScreenOverlay.module.scss
+++ b/src/features/Common/components/SmallScreenOverlay/SmallScreenOverlay.module.scss
@@ -6,7 +6,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 10001;
+  z-index: 2000;
   background-color: $white;
   .container {
     text-align: center;
