--- a/src/features/Page/components/Header/Header.module.scss
+++ b/src/features/Page/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 .header {
   box-shadow: $dropShadow;
   position: sticky;
-  z-index: 10;
+  z-index: 10000;
   display: flex;
   justify-content: space-between;
   top: 0;
